--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1 style="color: blue;">Hello World! 🎉</h1>
     <p>這是我用 VS Code 寫的第一個網頁，並且用 GitHub 託管！</p>
-    <p>老師我是不是很厲害！</p>
+    <p>歡迎來到我的個人網站！</p>
 </body>
 </html>
