--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
+								<h1>啟動</h1>
+								<p>這是我用 GitHub 架設的第一個超帥網站，歡迎光臨！</p>
 								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
 							</div>
 						</div>
