--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 							<div class="inner">
 								<h1>啟動</h1>
 								<p>這是我用 GitHub 架設的第一個超帥網站，歡迎光臨！</p>
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								for free under the <a href="https://html5up.net/license">版權所有 © 2025 HUANG</a> license.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#intro">自我介紹</a></li>
+								<li><a href="#work">我的作品</a></li>
+								<li><a href="#about">關於我</a></li>
+								<li><a href="#contact">聯絡方式</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
