--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<div class="inner">
 								<h1>啟動</h1>
 								<p>這是我用 GitHub 架設的第一個超帥網站，歡迎光臨！</p>
-								for free under the <a href="https://html5up.net/license">版權所有 © 2025 HUANG</a> license.</p>
+								<a href="https://html5up.net/license">版權所有 © 2025 HUANG</a> </p>
 							</div>
 						</div>
 						<nav>
